--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=David+Libre:wght@400;700&family=Lato:wght@400;700;900&family=Merriweather:wght@400;700;900&family=Sora:wght@400;500;600;700;800&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --ria-secondary-color: #25284b;
+  --neutral-black: #111222;
+  --dark: #000000;
+  --white: #fff;
+  --ria-primary-color: #195882;
+  --btn-color: #afafaf;
+  --background-color: #fafafa;
 }
